--- a/notebooks/1 - Scan_Parse_Store News.ipynb
+++ b/notebooks/1 - Scan_Parse_Store News.ipynb
@@ -141,7 +141,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5bfd20b4a1b4c3183fa41ade465c349",
+       "model_id": "05b90c06a1854c03a510d405f3345b70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,7 +296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time Taken:  146.8s\n"
+      "Time Taken:  178.4s\n"
      ]
     }
    ],
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -352,34 +352,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2021-11-08 13:12:00</th>\n",
-       "      <td>Magnus announces Series A Financing to Accele...</td>\n",
-       "      <td>CG</td>\n",
-       "      <td>https://www.prnewswire.com/news-releases/magnu...</td>\n",
+       "      <th>2021-11-09 19:48:00</th>\n",
+       "      <td>Intercorp Financial Services announces virtua...</td>\n",
+       "      <td>IFS</td>\n",
+       "      <td>https://www.prnewswire.com/news-releases/inter...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-11-08 13:01:00</th>\n",
-       "      <td>ADS-TEC Energy GmbH, a Leading Battery-Buffer...</td>\n",
-       "      <td>EUSG</td>\n",
-       "      <td>https://www.prnewswire.com/news-releases/ads-t...</td>\n",
+       "      <th>2021-11-09 19:46:00</th>\n",
+       "      <td>ICC Holdings, Inc. Reports 2021 Third Quarter...</td>\n",
+       "      <td>ICCH</td>\n",
+       "      <td>https://www.prnewswire.com/news-releases/icc-h...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-11-08 13:00:00</th>\n",
-       "      <td>New England Biolabs® releases next generation...</td>\n",
-       "      <td>MRVI</td>\n",
-       "      <td>https://www.prnewswire.com/news-releases/new-e...</td>\n",
+       "      <th>2021-11-09 19:00:00</th>\n",
+       "      <td>Smith+Nephew establishes its first Medical Ed...</td>\n",
+       "      <td>SNN</td>\n",
+       "      <td>https://www.prnewswire.com/news-releases/smith...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-11-08 12:53:00</th>\n",
-       "      <td>Shareholder Alert: Ademi LLP investigates whe...</td>\n",
-       "      <td>ZIXI</td>\n",
-       "      <td>https://www.prnewswire.com/news-releases/share...</td>\n",
+       "      <th>2021-11-09 18:56:00</th>\n",
+       "      <td>Cambridge Bancorp Announces Expansion of Weal...</td>\n",
+       "      <td>CATC</td>\n",
+       "      <td>https://www.prnewswire.com/news-releases/cambr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-11-08 12:52:00</th>\n",
-       "      <td>Shareholder Alert: Ademi LLP investigates whe...</td>\n",
-       "      <td>MCFE</td>\n",
-       "      <td>https://www.prnewswire.com/news-releases/share...</td>\n",
+       "      <th>2021-11-09 18:35:00</th>\n",
+       "      <td>EQT Ventures and EQT Growth to exit its holdi...</td>\n",
+       "      <td>DASH</td>\n",
+       "      <td>https://www.prnewswire.com/news-releases/eqt-v...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -388,22 +388,22 @@
       "text/plain": [
        "                                                                 Title Ticker  \\\n",
        "Date                                                                            \n",
-       "2021-11-08 13:12:00   Magnus announces Series A Financing to Accele...     CG   \n",
-       "2021-11-08 13:01:00   ADS-TEC Energy GmbH, a Leading Battery-Buffer...   EUSG   \n",
-       "2021-11-08 13:00:00   New England Biolabs® releases next generation...   MRVI   \n",
-       "2021-11-08 12:53:00   Shareholder Alert: Ademi LLP investigates whe...   ZIXI   \n",
-       "2021-11-08 12:52:00   Shareholder Alert: Ademi LLP investigates whe...   MCFE   \n",
+       "2021-11-09 19:48:00   Intercorp Financial Services announces virtua...    IFS   \n",
+       "2021-11-09 19:46:00   ICC Holdings, Inc. Reports 2021 Third Quarter...   ICCH   \n",
+       "2021-11-09 19:00:00   Smith+Nephew establishes its first Medical Ed...    SNN   \n",
+       "2021-11-09 18:56:00   Cambridge Bancorp Announces Expansion of Weal...   CATC   \n",
+       "2021-11-09 18:35:00   EQT Ventures and EQT Growth to exit its holdi...   DASH   \n",
        "\n",
        "                                                           Article URL  \n",
        "Date                                                                    \n",
-       "2021-11-08 13:12:00  https://www.prnewswire.com/news-releases/magnu...  \n",
-       "2021-11-08 13:01:00  https://www.prnewswire.com/news-releases/ads-t...  \n",
-       "2021-11-08 13:00:00  https://www.prnewswire.com/news-releases/new-e...  \n",
-       "2021-11-08 12:53:00  https://www.prnewswire.com/news-releases/share...  \n",
-       "2021-11-08 12:52:00  https://www.prnewswire.com/news-releases/share...  "
+       "2021-11-09 19:48:00  https://www.prnewswire.com/news-releases/inter...  \n",
+       "2021-11-09 19:46:00  https://www.prnewswire.com/news-releases/icc-h...  \n",
+       "2021-11-09 19:00:00  https://www.prnewswire.com/news-releases/smith...  \n",
+       "2021-11-09 18:56:00  https://www.prnewswire.com/news-releases/cambr...  \n",
+       "2021-11-09 18:35:00  https://www.prnewswire.com/news-releases/eqt-v...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "id": "-hE31yO46o7S"
    },
@@ -430,10 +430,10 @@
     {
      "data": {
       "text/plain": [
-       "'05Nov21-to-08Nov21.csv'"
+       "'09Nov21-to-09Nov21.csv'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "id": "-hE31yO46o7S"
    },
@@ -462,7 +462,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV file saved to: ../datasets/05Nov21-to-08Nov21.csv\n"
+      "CSV file saved to: ..\\datasets\\09Nov21-to-09Nov21.csv\n"
      ]
     }
    ],
