--- a/notebooks/2 - Retrieve Stocks Data.ipynb
+++ b/notebooks/2 - Retrieve Stocks Data.ipynb
@@ -25,33 +25,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting yfinance\n",
-      "  Using cached yfinance-0.1.64.tar.gz (26 kB)\n",
-      "Requirement already satisfied: pandas>=0.24 in /Users/raj/Documents/DurhamCollege/AI/Semester_1/Capstone-AIDI-1003/spoiler-buster/env/lib/python3.9/site-packages (from yfinance) (1.3.2)\n",
-      "Requirement already satisfied: numpy>=1.15 in /Users/raj/Documents/DurhamCollege/AI/Semester_1/Capstone-AIDI-1003/spoiler-buster/env/lib/python3.9/site-packages (from yfinance) (1.20.3)\n",
-      "Requirement already satisfied: requests>=2.20 in /Users/raj/Documents/DurhamCollege/AI/Semester_1/Capstone-AIDI-1003/spoiler-buster/env/lib/python3.9/site-packages (from yfinance) (2.26.0)\n",
-      "Collecting multitasking>=0.0.7\n",
-      "  Using cached multitasking-0.0.9.tar.gz (8.1 kB)\n",
-      "Collecting lxml>=4.5.1\n",
-      "  Downloading lxml-4.6.4-cp39-cp39-macosx_10_14_x86_64.whl (4.5 MB)\n",
-      "\u001b[K     |████████████████████████████████| 4.5 MB 436 kB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: python-dateutil>=2.7.3 in /Users/raj/Documents/DurhamCollege/AI/Semester_1/Capstone-AIDI-1003/spoiler-buster/env/lib/python3.9/site-packages (from pandas>=0.24->yfinance) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2017.3 in /Users/raj/Documents/DurhamCollege/AI/Semester_1/Capstone-AIDI-1003/spoiler-buster/env/lib/python3.9/site-packages (from pandas>=0.24->yfinance) (2021.1)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/raj/Documents/DurhamCollege/AI/Semester_1/Capstone-AIDI-1003/spoiler-buster/env/lib/python3.9/site-packages (from python-dateutil>=2.7.3->pandas>=0.24->yfinance) (1.16.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/raj/Documents/DurhamCollege/AI/Semester_1/Capstone-AIDI-1003/spoiler-buster/env/lib/python3.9/site-packages (from requests>=2.20->yfinance) (3.3)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0 in /Users/raj/Documents/DurhamCollege/AI/Semester_1/Capstone-AIDI-1003/spoiler-buster/env/lib/python3.9/site-packages (from requests>=2.20->yfinance) (2.0.7)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/raj/Documents/DurhamCollege/AI/Semester_1/Capstone-AIDI-1003/spoiler-buster/env/lib/python3.9/site-packages (from requests>=2.20->yfinance) (2021.10.8)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Users/raj/Documents/DurhamCollege/AI/Semester_1/Capstone-AIDI-1003/spoiler-buster/env/lib/python3.9/site-packages (from requests>=2.20->yfinance) (1.26.7)\n",
-      "Building wheels for collected packages: yfinance, multitasking\n",
-      "  Building wheel for yfinance (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for yfinance: filename=yfinance-0.1.64-py2.py3-none-any.whl size=24109 sha256=caf524e20414bade32040bd9d9aec66c1cca2c6b8219510fd598c735df900d23\n",
-      "  Stored in directory: /Users/raj/Library/Caches/pip/wheels/14/1e/2d/387bb238bef6f0c13ac61213e070fc2c8696c8e38fdc2935c9\n",
-      "  Building wheel for multitasking (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for multitasking: filename=multitasking-0.0.9-py3-none-any.whl size=8375 sha256=bb437e783c044f6bba5079bd579f68f3d1e3c0494e706cd07fe3e1268f265cf1\n",
-      "  Stored in directory: /Users/raj/Library/Caches/pip/wheels/1d/13/0b/0c32509050dcd9264e9a90b1d9d2dc9c6db9538db151ea7d26\n",
-      "Successfully built yfinance multitasking\n",
-      "Installing collected packages: multitasking, lxml, yfinance\n",
-      "Successfully installed lxml-4.6.4 multitasking-0.0.9 yfinance-0.1.64\n"
+      "Requirement already satisfied: yfinance in c:\\users\\meme\\anaconda3\\lib\\site-packages (0.1.64)\n",
+      "Requirement already satisfied: requests>=2.20 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from yfinance) (2.25.1)\n",
+      "Requirement already satisfied: lxml>=4.5.1 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from yfinance) (4.6.3)\n",
+      "Requirement already satisfied: multitasking>=0.0.7 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from yfinance) (0.0.9)\n",
+      "Requirement already satisfied: pandas>=0.24 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from yfinance) (1.2.4)\n",
+      "Requirement already satisfied: numpy>=1.15 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from yfinance) (1.20.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from pandas>=0.24->yfinance) (2.8.1)\n",
+      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from pandas>=0.24->yfinance) (2021.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7.3->pandas>=0.24->yfinance) (1.15.0)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from requests>=2.20->yfinance) (4.0.0)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from requests>=2.20->yfinance) (1.26.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from requests>=2.20->yfinance) (2020.12.5)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from requests>=2.20->yfinance) (2.10)\n"
      ]
     }
    ],
@@ -269,13 +255,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac58b8fa602945efad665c5f41052c0e",
+       "model_id": "343242b082724384a7f2546abd61b7bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -290,15 +276,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skipping Ticker: nan\n",
-      "Skipping Ticker: nan\n",
-      "Skipping Ticker: nan\n",
-      "Skipping Ticker: QTWO\n",
-      "Skipping Ticker: DRRX\n",
-      "Skipping Ticker: OTEX\n",
-      "Skipping Ticker: NSSC\n",
-      "Skipping Ticker: nan\n",
-      "Skipping Ticker: nan\n",
+      "Skipping Ticker: nan\t\tError: \n",
+      "Skipping Ticker: nan\t\tError: \n",
+      "Skipping Ticker: nan\t\tError: \n",
+      "Skipping Ticker: nan\t\tError: \n",
+      "Skipping Ticker: nan\t\tError: \n",
       "- BH.A: No data found, symbol may be delisted\n"
      ]
     }
@@ -330,7 +312,7 @@
     "#         print('Values of stock ' + ticker + '\\n' + str(stock_df))\n",
     "        stock_df.to_csv(output_stock_dump_path+ticker+'.csv', index=False)\n",
     "    except (AttributeError, Exception) as e:\n",
-    "        print(f'Skipping Ticker: {ticker}\\t\\tError: {e.message}')\n",
+    "        print(f'Skipping Ticker: {ticker}\\t\\tError: ')\n",
     "        continue\n"
    ]
   },
@@ -352,9 +334,9 @@
    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit (conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python397jvsc74a57bd0537b1257e8f3d87214f3bf8d7039d7c6d0483d490c50c1f967a98d26345650d1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -366,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
