--- a/notebooks/4-Visualization.ipynb
+++ b/notebooks/4-Visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "53125b08",
    "metadata": {},
    "outputs": [],
@@ -25,21 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "d85781c6",
    "metadata": {},
    "outputs": [],
    "source": [
     " #Import a CSV File into Python using Pandas\n",
     "#define working directory\n",
-    "#os.chdir(\"../datasets/stock_data/\")\n",
+    "os.chdir(\"../datasets/stock_data/\")\n",
     "#read csv file \n",
     "AB_df = pd.read_csv(\"AB.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "52d1bcb2",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
        "(30, 5)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
