--- a/notebooks/2 - Retrieve Stocks Data.ipynb
+++ b/notebooks/2 - Retrieve Stocks Data.ipynb
@@ -18,31 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: yfinance in c:\\users\\meme\\anaconda3\\lib\\site-packages (0.1.64)\n",
-      "Requirement already satisfied: requests>=2.20 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from yfinance) (2.25.1)\n",
-      "Requirement already satisfied: lxml>=4.5.1 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from yfinance) (4.6.3)\n",
-      "Requirement already satisfied: multitasking>=0.0.7 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from yfinance) (0.0.9)\n",
-      "Requirement already satisfied: pandas>=0.24 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from yfinance) (1.2.4)\n",
-      "Requirement already satisfied: numpy>=1.15 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from yfinance) (1.20.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from pandas>=0.24->yfinance) (2.8.1)\n",
-      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from pandas>=0.24->yfinance) (2021.1)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7.3->pandas>=0.24->yfinance) (1.15.0)\n",
-      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from requests>=2.20->yfinance) (4.0.0)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from requests>=2.20->yfinance) (1.26.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from requests>=2.20->yfinance) (2020.12.5)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\meme\\anaconda3\\lib\\site-packages (from requests>=2.20->yfinance) (2.10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install yfinance"
+    "# # install yfinance module\n",
+    "# !pip install yfinance"
    ]
   },
   {
@@ -255,13 +236,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "343242b082724384a7f2546abd61b7bc",
+       "model_id": "10a748df02b949c69af0682dd3bd98d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -312,7 +293,7 @@
     "#         print('Values of stock ' + ticker + '\\n' + str(stock_df))\n",
     "        stock_df.to_csv(output_stock_dump_path+ticker+'.csv', index=False)\n",
     "    except (AttributeError, Exception) as e:\n",
-    "        print(f'Skipping Ticker: {ticker}\\t\\tError: ')\n",
+    "        print(f'Skipping Ticker: {ticker}\\t\\tError: {e}')\n",
     "        continue\n"
    ]
   },
@@ -334,7 +315,7 @@
    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -348,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
